--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,11 @@ mono_crash.*
 
 # Build results
 [Dd]ebugPublic/
+[Dd]ebug/
 [Rr]elease/
 [Rr]eleases/
 x86/
+x64/
 [Ww][Ii][Nn]32/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
