--- a/SMMG3D - Tancodrom/SMMG3D - Tancodrom/SMMG3D - Tancodrom.vcxproj
+++ b/SMMG3D - Tancodrom/SMMG3D - Tancodrom/SMMG3D - Tancodrom.vcxproj
@@ -136,14 +136,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="copie.cpp" />
     <ClCompile Include="Helicopter.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="LightSource.cpp" />
+    <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Model.cpp" />
     <ClCompile Include="Moon.cpp" />
     <ClCompile Include="Particles.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneObject.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="SMMG3D - Tancodrom.cpp" />
     <ClCompile Include="Sun.cpp" />
     <ClCompile Include="Tank.cpp" />
@@ -153,13 +157,18 @@
     <ClInclude Include="Helicopter.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="LightSource.h" />
+    <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="Moon.h" />
     <ClInclude Include="Particles.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneObject.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="Sun.h" />
     <ClInclude Include="Tank.h" />
+    <ClInclude Include="Texture.h" />
+    <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PhongLight.fs" />
