--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,9 @@ target_link_libraries(tancodrom PRIVATE glm::glm)
 find_package(Stb REQUIRED)
 target_include_directories(tancodrom PRIVATE ${Stb_INCLUDE_DIR})
 
+find_package(SFML COMPONENTS system audio CONFIG REQUIRED)
+target_link_libraries(tancodrom PRIVATE sfml-system sfml-audio)
+
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/Vertex Shaders" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/Fragment Shaders" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/Models" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
