fix: Sounds path + auto move folder to build folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,4 @@ target_link_libraries(tancodrom PRIVATE sfml-audio)
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/Vertex Shaders" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/Fragment Shaders" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/Models" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/Sounds" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
